# ChangeLog for media-video/mkvtoolnix
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.65 2006/11/19 12:37:08 aballier Exp $

  19 Nov 2006; Alexis Ballier <aballier@gentoo.org>
  +files/mkvtoolnix-1.8.0-wxgtk.patch, mkvtoolnix-1.8.0.ebuild:
  Adding a patch to force the use of wxgtk 2.6, thanks to Philantrop
  <wk@mailstation.de>, bug #155600

  18 Nov 2006; Alexis Ballier <aballier@gentoo.org> mkvtoolnix-1.8.0.ebuild:
  Adding missing libpcre dep wrt bug #155553

*mkvtoolnix-1.8.0 (18 Nov 2006)

  18 Nov 2006; Alexis Ballier <aballier@gentoo.org>
  +mkvtoolnix-1.8.0.ebuild:
  Version bump. This one is flac 1.1.3 ready

  01 Nov 2006; Steve Dibb <beandog@gentoo.org> -mkvtoolnix-1.5.5.ebuild:
  Remove old versions

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  mkvtoolnix-1.5.5.ebuild, mkvtoolnix-1.7.0.ebuild:
  Depend on 1.1.2 version of flac, as the 1.1.3 version changes API.

  08 Oct 2006; Markus Rothe <corsair@gentoo.org> mkvtoolnix-1.7.0.ebuild:
  Added ~ppc64

  06 Oct 2006; Simon Stelling <blubb@gentoo.org> mkvtoolnix-1.7.0.ebuild:
  stable on amd64

  05 Oct 2006; <nixnut@gentoo.org> mkvtoolnix-1.7.0.ebuild:
  Stable on ppc wrt bug 150076

  05 Oct 2006; Joshua Jackson <tsunam@gentoo.org> ChangeLog:
  Stable x86; bug #150076

  07 Sep 2006; Steve Dibb <beandog@gentoo.org> mkvtoolnix-1.7.0.ebuild:
  Revert changes, remove stripping --as-needed

  07 Sep 2006; Steve Dibb <beandog@gentoo.org> mkvtoolnix-1.7.0.ebuild:
  Simpler checking of wxGTK USE flags, wrt bug #146756

*mkvtoolnix-1.7.0 (06 Sep 2006)

  06 Sep 2006; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-1.7.0.ebuild:
  Version bump

  30 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
  mkvtoolnix-1.5.5.ebuild, mkvtoolnix-1.6.5.ebuild:
  Filter out -fforce-addr, see Bug #113396.

  14 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  mkvtoolnix-1.6.5.ebuild: