@@ -1,0 +1,3 @@
+MD5 d8afc54ac136af8061c0e2f42de198cf mkvtoolnix-1.8.1.tar.bz2 665710
+RMD160 e3b6f61cd3ab73b679bd8fe82a6d3aad5bfe06e9 mkvtoolnix-1.8.1.tar.bz2 665710
+SHA256 2e43be38e8d7c4eff6fe09973b6fccb44e1aba83f93d1046f83cd10061969578 mkvtoolnix-1.8.1.tar.bz2 665710
